Add Image of Avatar

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
       <h1>About You</h1>
       Hello there, awesome person! 
+      <img src="https://avatars1.githubusercontent.com/u/47548286?v=4">
   </body>
 </html>
