--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
       <h1>About You</h1>
       Hello there, awesome person! 
       <img src="https://avatars1.githubusercontent.com/u/47548286?v=4">
+      
+      <ol>
+          <li>Mercari</l1>
+      <li>Amazon Smile</li>
+      <li>Google Maps</li>
+      </ol>
+    
   </body>
 </html>
