--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       
       <ol>
           <li>Mercari</l1>
-      <li>Amazon Smile</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
       <li>Google Maps</li>
       </ol>
     
